# internal/presentation/http/ginapp/handlers/user.go
@@ -441,3 +441,41 @@ func (h *UserHandler) UpdateRating(c *gin.Context) {
 
 	response.NewSuccessResponse(c, http.StatusOK, "Рейтинг пользователя обновлен успешно", rating)
 }
+
+// ConfirmAccount godoc
+// @Summary Подтверждение аккаунта
+// @Description Активирует аккаунт пользователя по токену
+// @Tags Users
+// @Produce json
+// @Param token query string true "Токен подтверждения"
+// @Success 200 {object} docs.SuccessResponseWithoutData "Аккаунт успешно активирован"
+// @Failure 400 {object} docs.ErrorResponse "Неверный токен"
+// @Failure 404 {object} docs.ErrorResponse "Пользователь не найден"
+// @Failure 500 {object} docs.ErrorResponse "Внутренняя ошибка"
+// @Router /users/confirm [post]
+func (h *UserHandler) ConfirmAccount(c *gin.Context) {
+	token := c.Query("token")
+
+	err := h.service.ConfirmAccount(c, token)
+	if err != nil {
+		h.logger.Errorf("Failed to confirm account: %v", err)
+		switch {
+		case errors.Is(err, application.ErrUserNotFound):
+			response.NewErrorResponse(c, http.StatusNotFound, "Пользователь не найден")
+			return
+
+		case errors.Is(err, application.ErrInvalidConfirmationToken):
+			response.NewErrorResponse(c, http.StatusBadRequest, "Неверный токен подтверждения")
+			return
+
+		case errors.Is(err, application.ErrInvalidUUIDFormat):
+			response.NewErrorResponse(c, http.StatusBadRequest, "Неверный формат UUID")
+			return
+		default:
+			response.NewErrorResponse(c, http.StatusInternalServerError, err.Error())
+			return
+		}
+	}
+
+	response.NewSuccessResponse(c, http.StatusOK, "Аккаунт успешно активирован", nil)
+}
